<resources>
    <string name="app_name">DMIT2504Lab02</string>


    <!--Main Activity Strings-->
    <string name="main_activity_new_list">New List</string>
    <string name="main_activity_new_list_edit_text">Add a new list</string>
    <string name="main_activity_add_list_button">Add</string>
    <string name="main_activity_preview">Preview</string>
    <string name="list_no_data_available">No list data currently</string>
    <string name="main_activity_edit_list">Edit List</string>
    <string name="main_activity_select">Select:</string>
    <string name="empty_list">Nothing currently in the list.</string>


</resources>
